fixed box shadow bug and added some spacing for mobile footer

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -3,7 +3,6 @@
 	padding: 10px 64px;
 	display: grid;
 	grid-template-columns: 50% 50%;
-	/* Font color, will change */
 }
 
 .left {
@@ -32,14 +31,15 @@
 }
 
 .separator {
-	background-color: #ffffff20;
+	height: 10px;
+	box-shadow: 0 2px 1px -1px #ffffff20 !important;
 	margin: 0px 64px;
 }
 
 @media (max-width: 991px) {
 	.content {
 		height: auto;
-		padding: 9px 18px;
+		padding: 9px 18px 36px 18px;
 	}
 	.separator {
 		display: none;
